final one for now

--- a/index.html
+++ b/index.html
@@ -53,95 +53,98 @@
 
     <!-- hero-main -->
     <section class="hero-main">
-        <div class="row p-0 m-0 align-items-center">
-            <div class="col-md-6">
-                <div class="hero-left">
-                    <h4>
-                        Upcomming Clinics
-                    </h4>
-                    <div class="clinics-list">
-                        <ul>
-                            <li class="d-flex align-items-center justify-content-between">
-                                <div class="left-list d-flex align-items-center">
-                                    <span class="date">Nov <br><strong>12</strong></span>
-                                    <span class="ms-5">
-                                        <strong>Shooting Clinic A</strong>
-                                        <br>
-                                        Starts from 10:00 Am
-                                    </span>
-                                </div>
-                                <div class="right-list">
-                                    <button>Register Now</button>
-                                </div>
-                            </li>
-                            <li class="d-flex align-items-center justify-content-between">
-                                <div class="left-list d-flex align-items-center">
-                                    <span class="date">Nov <br><strong>12</strong></span>
-                                    <span class="ms-5">
-                                        <strong>Passing Clinic A</strong>
-                                        <br>
-                                        Starts from 10:00 Am
-                                    </span>
-                                </div>
-                                <div class="right-list">
-                                    <button>Register Now</button>
-                                </div>
-                            </li>
-                            <li class="d-flex align-items-center justify-content-between">
-                                <div class="left-list d-flex align-items-center">
-                                    <span class="date">Nov <br><strong>13</strong></span>
-                                    <span class="ms-5">
-                                        <strong>Shooting Clinic A</strong>
-                                        <br>
-                                        Starts from 10:00 Am
-                                    </span>
-                                </div>
-                                <div class="right-list">
-                                    <button>Register Now</button>
-                                </div>
-                            </li>
-                            <li class="d-flex align-items-center justify-content-between">
-                                <div class="left-list d-flex align-items-center">
-                                    <span class="date">Nov <br><strong>14</strong></span>
-                                    <span class="ms-5">
-                                        <strong>Shooting Clinic B</strong>
-                                        <br>
-                                        Starts from 10:00 Am
-                                    </span>
-                                </div>
-                                <div class="right-list">
-                                    <button>Register Now</button>
-                                </div>
-                            </li>
-                            <li class="d-flex align-items-center justify-content-between">
-                                <div class="left-list d-flex align-items-center">
-                                    <span class="date">Nov <br><strong>15</strong></span>
-                                    <span class="ms-5">
-                                        <strong>Shooting Clinic A</strong>
-                                        <br>
-                                        Starts from 10:00 Am
-                                    </span>
-                                </div>
-                                <div class="right-list">
-                                    <button>Register Now</button>
-                                </div>
-                            </li>
+        <div class="container">
+            <div class="row  align-items-center">
+                <div class="col-md-6">
+                    <div class="hero-left">
+                        <h4>
+                            Upcomming Clinics
+                        </h4>
+                        <div class="clinics-list">
+                            <ul>
+                                <li class="d-flex align-items-center justify-content-between">
+                                    <div class="left-list d-flex align-items-center">
+                                        <span class="date">Nov <br><strong>12</strong></span>
+                                        <span class="ms-5">
+                                            <strong>Shooting Clinic A</strong>
+                                            <br>
+                                            Starts from 10:00 Am
+                                        </span>
+                                    </div>
+                                    <div class="right-list">
+                                        <button>Register Now</button>
+                                    </div>
+                                </li>
+                                <li class="d-flex align-items-center justify-content-between">
+                                    <div class="left-list d-flex align-items-center">
+                                        <span class="date">Nov <br><strong>12</strong></span>
+                                        <span class="ms-5">
+                                            <strong>Passing Clinic A</strong>
+                                            <br>
+                                            Starts from 10:00 Am
+                                        </span>
+                                    </div>
+                                    <div class="right-list">
+                                        <button>Register Now</button>
+                                    </div>
+                                </li>
+                                <li class="d-flex align-items-center justify-content-between">
+                                    <div class="left-list d-flex align-items-center">
+                                        <span class="date">Nov <br><strong>13</strong></span>
+                                        <span class="ms-5">
+                                            <strong>Shooting Clinic A</strong>
+                                            <br>
+                                            Starts from 10:00 Am
+                                        </span>
+                                    </div>
+                                    <div class="right-list">
+                                        <button>Register Now</button>
+                                    </div>
+                                </li>
+                                <li class="d-flex align-items-center justify-content-between">
+                                    <div class="left-list d-flex align-items-center">
+                                        <span class="date">Nov <br><strong>14</strong></span>
+                                        <span class="ms-5">
+                                            <strong>Shooting Clinic B</strong>
+                                            <br>
+                                            Starts from 10:00 Am
+                                        </span>
+                                    </div>
+                                    <div class="right-list">
+                                        <button>Register Now</button>
+                                    </div>
+                                </li>
+                                <li class="d-flex align-items-center justify-content-between">
+                                    <div class="left-list d-flex align-items-center">
+                                        <span class="date">Nov <br><strong>15</strong></span>
+                                        <span class="ms-5">
+                                            <strong>Shooting Clinic A</strong>
+                                            <br>
+                                            Starts from 10:00 Am
+                                        </span>
+                                    </div>
+                                    <div class="right-list">
+                                        <button>Register Now</button>
+                                    </div>
+                                </li>
 
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="hero-right">
+                        <img src="./img/image 3 or 4 (2).png" alt="">
+                        <ul class="progressbar mt-3">
+                            <li class="active">Learn</li>
+                            <li>Play</li>
+                            <li>Graduate</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="hero-right">
-                    <img src="./img/image 3 or 4 (2).png" alt="">
-                    <ul class="progressbar mt-3">
-                        <li class="active">Learn</li>
-                        <li>Play</li>
-                        <li>Graduate</li>
-                    </ul>
-                </div>
-            </div>
         </div>
+
     </section>
 
     <!-- Hero-end -->
