--- a/clinicPage.html
+++ b/clinicPage.html
@@ -78,7 +78,7 @@
                             structured in twelve levels. Each level is designed to build off the last
                             and crafted to have a challenging but attainable goal to overcome.
                             <br>
-    
+
                             Every level will have each of the following: ball work, a specific
                             concept, and a challenge. The ball work is simply to help the players
                             become more comfortable with the ball at their feet. The concept will
@@ -114,19 +114,19 @@
                         <div class="address">
                             <i class="fas fa-map-marker-alt"></i>
                             <h4>Location:</h4>
-                            <p>Oklahoma City, OK. | Dallas, TX.</p>
+                            <p>A108 Adam Street, New York, NY 535022</p>
                         </div>
 
                         <div class="email">
                             <i class="far fa-envelope"></i>
                             <h4>Email:</h4>
-                            <p>info@soccerallies.com</p>
+                            <p>info@example.com</p>
                         </div>
 
                         <div class="phone">
                             <i class="fas fa-phone-alt"></i>
                             <h4>Call:</h4>
-                            <p>(123) 456-78-90</p>
+                            <p>+1 5589 55488 55s</p>
                         </div>
 
                         <iframe
