--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
                 <div class="col-md-6">
                     <div class="why-content">
                         <div class="title-why">Why <span>Soccer allies</span> / Who we are.</div>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                        <p class=" text-secondary">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry. Lorem Ipsum has
                             been
                             the industry's standard dummy text ever since the 1500s, when an unknown printer took a
                             galley
@@ -266,12 +267,13 @@
                     <a href="clinicPage.html">
                         <div class="content-section">
                             <div class="card">
-                                <img src="./img/image 3 or 4 (2).png" alt="">
+                                <div class="imagee"> <img src="./img/image 3 or 4 (2).png" alt=""></div>
                                 <div class="card-content">
                                     <h4 class=" text-uppercase">
                                         CLINICS
                                     </h4>
-                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, asperiores
+                                    <p class="text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Sed, asperiores
                                         molestiae.
                                         Cupiditate repellat esse, eos rem consequatur adipisci quidem eveniet sint amet
                                     </p>
@@ -284,12 +286,13 @@
                     <a href="champPage.html">
                         <div class="content-section">
                             <div class="card">
-                                <img src="./img/image 5.png" alt="">
+                                <div class="imagee"><img src="./img/image 5.png" alt=""></div>
                                 <div class="card-content">
                                     <h4 class=" text-uppercase">
                                         CAMPS
                                     </h4>
-                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, asperiores
+                                    <p class="text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Sed, asperiores
                                         molestiae.
                                         Cupiditate repellat esse, eos rem consequatur adipisci quidem eveniet sint amet
                                     </p>
@@ -302,12 +305,13 @@
                     <a href="miniAllies.html">
                         <div class="content-section">
                             <div class="card">
-                                <img src="./img/Mini Allies image 6 .png" alt="">
+                                <div class="imagee"><img src="./img/Mini Allies image 6 .png" alt=""></div>
                                 <div class="card-content">
                                     <h4 class=" text-uppercase">
                                         MINI ALLIES
                                     </h4>
-                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, asperiores
+                                    <p class="text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Sed, asperiores
                                         molestiae.
                                         Cupiditate repellat esse, eos rem consequatur adipisci quidem eveniet sint amet
                                     </p>
@@ -321,12 +325,13 @@
                     <a href="">
                         <div class="content-section">
                             <div class="card">
-                                <img src="./img/Team pic image 7 (1).png" alt="" class="ms-4" width="100%">
+                                <div class="imagee"><img src="./img/Team pic image 7 (1).png" alt="" class="ms-4"></div>
                                 <div class="card-content">
                                     <h4 class=" text-uppercase">
                                         Teams
                                     </h4>
-                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, asperiores
+                                    <p class="text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Sed, asperiores
                                         molestiae.
                                         Cupiditate repellat esse, eos rem consequatur adipisci quidem eveniet sint amet
                                     </p>
@@ -359,19 +364,19 @@
                 <div class="col-lg-5 d-flex align-items-stretch">
                     <div class="info">
                         <div class="address">
-                            <i class="bi bi-geo-alt"></i>
+                            <i class="fas fa-map-marker-alt"></i>
                             <h4>Location:</h4>
                             <p>A108 Adam Street, New York, NY 535022</p>
                         </div>
 
                         <div class="email">
-                            <i class="bi bi-envelope"></i>
+                            <i class="far fa-envelope"></i>
                             <h4>Email:</h4>
                             <p>info@example.com</p>
                         </div>
 
                         <div class="phone">
-                            <i class="bi bi-phone"></i>
+                            <i class="fas fa-phone-alt"></i>
                             <h4>Call:</h4>
                             <p>+1 5589 55488 55s</p>
                         </div>
