--- a/clinicPage.html
+++ b/clinicPage.html
@@ -64,8 +64,7 @@
             <div class="clinics-content">
                 <div class="row">
                     <div class="col-md-5">
-                        <iframe width="100%" height="100%"
-                            src="https://www.youtube.com/embed/4mJayYlfcWo?list=RDGMEMJQXQAmqrnmK1SEjY_rKBGAVM4mJayYlfcWo"
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/eREaLvOByfg"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
@@ -91,6 +90,11 @@
                             emphasis is put on the players grasping the concept at each
                             level. All graduations are at the full discretion of the Soccer Allies
                         </p>
+                    </div>
+                </div>
+                <div class="row align-items-center mt-5">
+                    <div class="col-md-12 text-center">
+                               <img src="./img/Next level challenge image.PNG" width="100%" height="100%" alt="">
                     </div>
                 </div>
             </div>
