--- a/miniAllies.html
+++ b/miniAllies.html
@@ -64,10 +64,10 @@
             <div class="miniAllies-content">
                 <div class="row">
                     <div class="col-md-6">
-                        <iframe width="100%" height="300" src="https://www.youtube.com/embed/H7KbPhjTp70"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <iframe width="100%" height="300" src="https://www.youtube.com/embed/eREaLvOByfg"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                         <p class=" text-secondary mt-3">
                             <span> IMPORTANT:</span> ***Your monthly membership will start at the beginning of
                             the next month you
