--- a/aboutus.html
+++ b/aboutus.html
@@ -48,36 +48,101 @@
             </nav>
         </div>
     </section>
-
     <!-- header-end -->
-    <!-- champDetails -->
-    <section class="champDetails">
+
+
+    <!-- clinics page -->
+    <section class="aboutUs">
         <!-- ======= Breadcrumbs ======= -->
         <section id="breadcrumbs" class="breadcrumbs">
             <div class="container">
-                <h3 class="text-center text-uppercase">Champs</h3>
+                <h3 class="text-center text-uppercase">About Us</h3>
 
             </div>
         </section><!-- End Breadcrumbs -->
-
         <div class="container">
-            <div class="champ-content">
-                <div class="row ">
-                    <div class="col-md-6">
-                        <h4>How the Next Level Challenge Works...</h4>
-                        <p class=" text-secondary">An excellent opportunity for players to come out learn new skills and
-                            grow as a player. We believe youth soccer players who are given more opportunities to work
-                            with the ball at their feet and gain knowledge of the game will become more confident as a
-                            player and enjoy what soccer can provide to them on an individual level.
+            <div class="aboutus-content">
+                <div class="row">
+                    <div class="section-title">
+                        <h2>What We<span> Believe</span></h2>
                     </div>
-                    <div class="col-md-6">
-                        <img src="./img/image 9.jpg" width="100%" height="100%" alt="">
+                    <div class="col-md-12">
+                        <p> From our experience, we’ve noticed that the majority of players are missing out on the value
+                            of all the intangibles the game can provide. Competing and winning is important, but not
+                            nearly as important as the players enhancing their confidence level to beat defenders
+                            consistently using their own creativity. This is where we come in. We give players the
+                            opportunity to discover their true potential through our structured curriculum. Players are
+                            taught how to take advantage of having the ball at their feet, be creative, and deceive the
+                            defender. We acknowledge that there are many other important factors in being a great soccer
+                            player. Yet, at a young age, confidence with the ball can speed up the game for both the
+                            individual player and their teammates. In doing so, this player has the ability to become
+                            someone that others look up to.
+                            <br>
+                            <br>
+                            Soccer Allies strives to develop leadership qualities in children by using soccer as our
+                            platform. It is our belief that players who are extremely comfortable with the ball gain
+                            more confidence in their ability to execute certain skills or moves on the field. Athletes
+                            that exude confidence tend to be leaders both on the field and in their social circles. We
+                            want to be the program that gives youth players the chance to improve their overall
+                            confidence level.
+                        </p>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="section-title">
+                        <h2> What We<span> Do</span></h2>
+                    </div>
+                    <div class="col-md-12">
+                        <p> At the youth level players are constantly put under pressure by defenders, whether in games,
+                            practices, or drills. Soccer Allies delivers the tools to help players understand how to get
+                            out of these situations. It all starts in being comfortable with the ball at your feet. We
+                            ingrain the attributes needed to become a successful dribbler by constantly addressing:
+                            <br>
+                        <ol>
+                            <li>Proper dribbling technique</li>
+                            <li>The importance of control over speed</li>
+                            <li>Looking at an angle while dribbling</li>
+                            <li> Manipulating the defender by deceptive dribbling.</li>
+                        </ol>
+                        <br>
+                        Once players recognize why these attributes are important, it is inevitable that they will push
+                        themselves to learn more and try new skills. In realizing this, Soccer Allies has come up with a
+                        progression format, the Next Level Challenge, which will hold players accountable during their
+                        development. The format challenges players to execute specific touches and skills at each stage.
+                        After they perform these techniques with quality they must be able to use them in 1v1 game-like
+                        situations. If they successfully complete these skills based on the coach’s discretion, they
+                        will be rewarded by moving to the next stage. Our goal is for everyone to graduate through the
+                        process and become “Next Level” players. These players will join an elite group throughout the
+                        area in more intense sessions geared towards decision-making at every position on the field.
+                        </p>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="section-title">
+                        <h2> How We<span> Do It</span></h2>
+                    </div>
+                    <div class="col-md-12">
+                        <p> Soccer Allies offers both camps and weekly clinics to players. Our methodology focuses on
+                            how to use different skills based on the positioning of the defender and where the player is
+                            on the field. This will help players in UNDERSTANDING when to perform a skill and why it
+                            works.
+                            <br>
+                            <br>
+                            In our progression program, the reason why players use specific skills will be noted at each
+                            level as our ”concept”. Players must show that they understand the concept and perform their
+                            touches or skills with quality at the coach’s approval. Once completing their task at each
+                            level, they will progress and be acknowledged for their advancement. Soccer Allies has a
+                            total of 12 levels that players must pass with quality to become “Next Level” players at
+                            Soccer Allies. “Next Level” players will be presented with more tactical and conceptual
+                            sessions in the future and be known to the Soccer Allies community as a skillful player who
+                            understands the game and is willing to put effort in to achieve success.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- champDetails -end -->
+    <!-- clinics page-end -->
 
 
     <!-- ======= Contact Section ======= -->
@@ -86,9 +151,6 @@
 
             <div class="section-title">
                 <h2>Contact</h2>
-                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-                    consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-                    fugiat sit in iste officiis commodi quidem hic quas.</p>
             </div>
 
             <div class="row">
@@ -140,6 +202,11 @@
                             <label for="name">Message</label>
                             <textarea class="form-control" name="message" rows="10" required></textarea>
                         </div>
+                        <div class="my-3">
+                            <div class="loading">Loading</div>
+                            <div class="error-message"></div>
+                            <div class="sent-message">Your message has been sent. Thank you!</div>
+                        </div>
                         <div class="text-center"><button type="submit">Send Message</button></div>
                     </form>
                 </div>
@@ -148,6 +215,7 @@
 
         </div>
     </section><!-- End Contact Section -->
+
 
 
     <!-- Footer -->
